test: fix ChildServiceImplTest compilation and null pointers